# naobot

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.githooks/: pre-commit
.superpowers/sdd/: native-media-fix-report.md  task-storage-report.md
docs/: development.md
docs/agents/: handoff-template.md  review-checklist.md  roles.md  task-template.md
docs/architecture/: protocol.md  safety-policy.md  system-architecture.md
docs/decisions/: ADR-0001-project-boundary.md  ADR-0002-host-vs-firmware.md  ADR-0003-agentscope-brain-runtime.md
docs/product/: acceptance.md  prd.md  roadmap.md
docs/reviews/: 2026-07-14-phase1-software-foundation.md  2026-07-14-product-capability-audit.md
firmware/esp32/: README.md  config.py  (+1 more)
tests/: test_agent.py  test_behavior.py  test_brain.py  test_event_queue.py  test_firmware_actions.py  test_firmware_boot_health.py  test_firmware_control.py  test_firmware_hardware.py  test_firmware_media.py  test_firmware_media_worker.py  test_firmware_multicell_power.py  test_firmware_native_media_modules.py  test_firmware_network.py  test_firmware_ota.py  test_firmware_ota_worker.py  test_firmware_storage.py  test_firmware_tick_skills.py  test_firmware_xiao_hardware.py  test_identity_flow.py  test_intent_tracker.py  test_interaction.py  test_llm.py  test_local_perception.py  test_media.py  test_media_server.py  test_package_firmware_update.py  test_policy.py  test_runtime.py  test_server.py  test_storage.py  test_xiao_board_build.py
tools/: check_prd_sync.py  package_firmware_update.py  validate_ota_public_key.py
(+70 files in other folders)
