[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "naobot"
version = "0.1.0"
description = "KT2 LLM 桌面智能机器人软件 MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiosqlite>=0.21.0",
  "agentscope==2.0.4",
  "click>=8.4.1",
  "cryptography>=49.0.0",
  "fastapi>=0.128.0",
  "httpx>=0.28.0",
  "jinja2>=3.1.0",
  "pydantic>=2.12.0",
  "PyYAML>=6.0.3",
  "rich>=15.0.0",
  "uvicorn[standard]>=0.38.0",
  "websockets>=15.0.0",
]

[project.scripts]
naobot = "naobot.cli:main"

[project.optional-dependencies]
media-local = [
  "faster-whisper",
  "openwakeword",
  "opencv-contrib-python-headless",
  "mediapipe",
  "sherpa-onnx",
  "onnxruntime",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
naobot = ["web/*.html", "web/*.js", "web/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
